[package]
name = "huffr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
evm-rs-emulator = "0.1.4"

# Huff git sub module
[dependencies.huff_parser]
path = "lib/huff-rs/huff_parser"
[dependencies.huff_lexer]
path = "lib/huff-rs/huff_lexer"
[dependencies.huff_utils]
path = "lib/huff-rs/huff_utils"
